Shuffled some things around and make a test/debugging sender

--- a/test_sender.html
+++ b/test_sender.html
@@ -39,7 +39,13 @@
 <div class="container">
 
     <div class="jumbotron">
-        <div id="display">display</div>
+        <div>
+            <textarea id="textbox" title="what to send" style="width: 100%; height: 200px"></textarea>
+            <br>
+            <button class="btn btn-primary" id="sendMsg" style="width: 49%; margin-right:0.5%; display: inline-block">Send</button>
+            <button class="btn btn-danger" id="clearMsg" style="width: 49%; margin-left:0.5%; display: inline-block">Clear</button>
+        </div>
+        <br>
     </div>
 
     <div class="jumbotron">
